Updated Some Comments
Updated comments in the params.toml file related to giscus integration.

Will need to work on getting that to actually work. At the moment it is
not.

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -79,6 +79,7 @@ showComments = true
 # Whether to display breadcrumbs
 showBreadcrumbs = false
 
+# Giscus commenting
 [giscus]
 repo = "n3s0/n3s0.github.io"
 repoID = "R_kgDOMyo-C"
