Don't build future

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -25,7 +25,7 @@ summaryLength = 1
 # Build drafts during site generation.
 buildDrafts = false
 # Build pages with future dates during site generation.
-buildFuture = true
+buildFuture = false
 
 # The types of outputs to generate for the homepage.
 # RSS is required to create RSS feeds, and JSON is needed for the search to function.
