--- a/hugo.toml
+++ b/hugo.toml
@@ -67,3 +67,7 @@ summaryLength = 1
   [module.hugoVersion]
     extended = false
     min = '0.146.0'
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
