--- a/hugo.toml
+++ b/hugo.toml
@@ -18,34 +18,39 @@ summaryLength = 1
 
 [menus]
   [[menus.main]]
+    name = 'n3s0 || journal'
+    title = 'n3s0 || journal'
+    url = '/'
+    weight = 1
+  [[menus.main]]
     name = 'Journal'
     title = 'Journal'
-    url = '/journal'
-    weight = 1
+    url = '/journal/'
+    weight = 2
   [[menus.main]]
     name = 'Build'
     title = 'Build'
-    url = '/build'
-    weight = 2
+    url = '/build/'
+    weight = 3
   [[menus.main]]
     name = 'Notes'
     title = 'Notes'
-    url = '/notes'
-    weight = 3
+    url = '/notes/'
+    weight = 4
   [[menus.main]]
     name = 'Projects'
     title = 'Projects'
-    url = '/projects'
-    weight = 4
+    url = '/projects/'
+    weight = 5
   [[menus.main]]
     name = 'Bookmarks'
     title = 'Bookmarks'
-    url = '/bookmarks'
+    url = '/bookmarks/'
     weight = 10
   [[menus.main]]
     name = 'Contact'
     title = 'Contact'
-    url = '/contact'
+    url = '/contact/'
     weight = 11
   [[menus.main]]
     name = 'Github'
@@ -64,6 +69,11 @@ summaryLength = 1
     title = 'RSS'
     url = '/index.xml'
     weight = 15
+  [[ menus.footer ]]
+    name = 'Contact'
+    title = 'Contact'
+    url = '/contact'
+    weight = 1
 
 
 [module]
