--- a/hugo.toml
+++ b/hugo.toml
@@ -86,3 +86,8 @@ pagination.pagerSize = 5
         name = "Search"
         url = "/construction"
         weight = 60
+      [[languages.en.menu.main]]
+        identifier = "writeups"
+        name = "Writeups"
+        url = "/construction"
+        weight = 100
