--- a/hugo.toml
+++ b/hugo.toml
@@ -21,6 +21,16 @@ pagination.pagerSize = 5
   updatedDatePrefix = "Updated:"
   dateFormat = "2006-01-02"
 
+[[assets.fuseOpts]]
+  isCaseSensitive = false
+  shouldSort = true
+  location = 0
+  distance = 1000
+  threshold = 0.4
+  minMatchCharLength = 0
+  limit = 10 # refer: https://www.fusejs.io/api/methods.html#search
+  keys = ["title", "permalink", "summary", "content"]
+
 [languages]
   [languages.en]
     languageName = "English"
@@ -82,12 +92,7 @@ pagination.pagerSize = 5
         url = "/construction"
         weight = 42
       [[languages.en.menu.main]]
-        identifier = "search"
-        name = "Search"
-        url = "/construction"
-        weight = 60
-      [[languages.en.menu.main]]
         identifier = "writeups"
         name = "Writeups"
         url = "/construction"
-        weight = 100
+        weight = 32
