--- a/hugo.toml
+++ b/hugo.toml
@@ -21,16 +21,6 @@ pagination.pagerSize = 5
   updatedDatePrefix = "Updated:"
   dateFormat = "2006-01-02"
 
-[[assets.fuseOpts]]
-  isCaseSensitive = false
-  shouldSort = true
-  location = 0
-  distance = 1000
-  threshold = 0.4
-  minMatchCharLength = 0
-  limit = 10 # refer: https://www.fusejs.io/api/methods.html#search
-  keys = ["title", "permalink", "summary", "content"]
-
 [languages]
   [languages.en]
     languageName = "English"
@@ -126,6 +116,11 @@ pagination.pagerSize = 5
         name = "Library"
         url = "/construction"
         weight = 63
+      [[languages.en.menu.main]]
+        identifier = "writeups"
+        name = "Writeups"
+        url = "/feed/writeups"
+        weight = 64
       [[languages.en.menu.main]]
         identifier = "travel"
         name = "Travel"
